--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@
     outline: 0;
     padding: 15px 30px;
     border-radius: 5px;
+    font-size: 2rem;
     font-weight: 500;
     color: #333;
     cursor: pointer;
