--- a/style.css
+++ b/style.css
@@ -191,12 +191,21 @@ nav ul li a:hover::after {
   cursor: pointer;
 }
 
+#cal-btn {
+  background-color: var(--sky-blue);
+  border: none;
+  padding: 12px 35px;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  font-weight: 550;
+}
+
 #result {
   font-size: 25px;
 }
 
 #result span {
-  color: #ffff76;
+  color: var(--sky-blue);
 }
 
 /* Mobile devices (up to 600px) */
